--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "obsidian-kanban",
-  "version": "2.0.52",
-  "description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+  "name": "kanban-with-notes",
+  "version": "1.0.0",
+  "description": "Create markdown-backed Kanban boards with inline board notes for Obsidian",
   "main": "main.js",
   "scripts": {
     "typecheck": "tsc --noemit",
