Add automated E2E testing infrastructure
- GitHub Actions workflows for automated testing on every push/PR
  - E2E test workflow with Playwright
  - Build verification workflow
- Comprehensive E2E test suite (9 tests covering all board notes features)
- Docker-based testing setup (for alternative testing environments)
- Test vault with pre-configured plugin installation
- Documentation: E2E-TESTING.md with setup and troubleshooting guide
- Updated .gitignore for test artifacts

Tests verify:
- Board notes disabled by default
- Enable/disable functionality
- Board notes rendering and content
- Frontmatter exclusion
- Collapse/expand functionality
- Edit mode with save/cancel
- Max-height scroll behavior
- Settings integration

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,16 @@ package-lock.json
 .env
 yarn*
 dist
-test-vault/
+/test-vault/
 main.js
 styles.css
+
+# E2E testing artifacts
+test-results/
+playwright-report/
+test-output.log
+logs/
+
+# Test automation (keep test files, exclude generated artifacts)
+test-automation/squashfs-root/
+test-automation/Obsidian.AppImage
