--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@codemirror/commands": "^6.0.0",
     "@codemirror/state": "^6.0.0",
     "@codemirror/view": "^6.0.0",
+    "@playwright/test": "^1.57.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/box-intersect": "^1.0.0",
     "@types/mark.js": "^8.11.5",
@@ -30,6 +31,7 @@
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
     "builtin-modules": "^3.3.0",
+    "electron": "^39.2.7",
     "esbuild": "^0.19.11",
     "esbuild-plugin-less": "^1.3.1",
     "eslint": "^8.56.0",
@@ -40,6 +42,7 @@
     "obsidian-plugin-cli": "^0.9.0",
     "prettier": "^3.1.1",
     "replace": "^1.2.2",
+    "ts-node": "^10.9.2",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3"
   },
