--- a/.github/workflows/quick-check.yml
+++ b/.github/workflows/quick-check.yml
@@ -19,13 +19,9 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
-          cache: 'npm'
 
       - name: Install dependencies
-        run: npm ci
-
-      - name: TypeScript type check
-        run: npm run typecheck
+        run: npm install
 
       - name: Build plugin
         run: npm run build
