--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -26,6 +26,13 @@ jobs:
       - name: Build plugin
         run: npm run build
 
+      - name: Download Obsidian AppImage
+        run: |
+          mkdir -p test-automation
+          curl -L "https://github.com/obsidianmd/obsidian-releases/releases/download/v1.10.6/Obsidian-1.10.6.AppImage" -o test-automation/Obsidian.AppImage
+          chmod +x test-automation/Obsidian.AppImage
+          echo "✅ Obsidian AppImage downloaded"
+
       - name: Install Playwright browsers
         run: npx playwright install --with-deps chromium
 
