Replace Playwright with wdio-obsidian-service for E2E testing
- Remove non-working Playwright setup
- Install wdio-obsidian-service (purpose-built for Obsidian plugins)
- Create comprehensive E2E tests for board notes feature
- Configure GitHub Actions workflow with xvfb + herbstluftwm
- Update documentation with wdio setup instructions

wdio-obsidian-service provides:
- Obsidian-specific helpers (executeObsidianCommand, reloadObsidian)
- Proven CI/CD support in GitHub Actions
- Better reliability than generic Electron testing tools
- Used by production Obsidian plugins like ObsidianToAnki

Tests now ready to run both locally and in CI!

--- a/.gitignore
+++ b/.gitignore
@@ -17,11 +17,7 @@ main.js
 styles.css
 
 # E2E testing artifacts
-test-results/
-playwright-report/
-test-output.log
-logs/
-
-# Test automation (keep test files, exclude generated artifacts)
-test-automation/squashfs-root/
-test-automation/Obsidian.AppImage
+.obsidian-cache/
+wdio-logs/
+allure-results/
+allure-report/
