--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "typecheck": "tsc --noemit",
     "dev": "node esbuild.config.mjs",
     "build": "node esbuild.config.mjs production",
+    "test:e2e": "wdio run ./wdio.conf.mts",
     "lint": "eslint ./src/**/*.{ts,tsx}",
     "lint:fix": "eslint ./src/**/*.{ts,tsx} --fix",
     "prettier": "prettier --write \"./src/**/*.{ts,tsx}\"",
@@ -22,14 +23,18 @@
     "@codemirror/commands": "^6.0.0",
     "@codemirror/state": "^6.0.0",
     "@codemirror/view": "^6.0.0",
-    "@playwright/test": "^1.57.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/box-intersect": "^1.0.0",
     "@types/mark.js": "^8.11.5",
+    "@types/mocha": "^10.0.10",
     "@types/node": "^14.14.37",
     "@types/raf-schd": "^4.0.1",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
+    "@wdio/cli": "^9.21.1",
+    "@wdio/local-runner": "^9.21.0",
+    "@wdio/mocha-framework": "^9.21.0",
+    "@wdio/spec-reporter": "^9.20.0",
     "builtin-modules": "^3.3.0",
     "electron": "^39.2.7",
     "esbuild": "^0.19.11",
@@ -37,6 +42,7 @@
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "magic-string": "^0.30.10",
+    "mocha": "^11.7.5",
     "obsidian": "^1.5.7-1",
     "obsidian-dataview": "^0.5.66",
     "obsidian-plugin-cli": "^0.9.0",
@@ -44,7 +50,9 @@
     "replace": "^1.2.2",
     "ts-node": "^10.9.2",
     "tslib": "^2.6.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "wdio-obsidian-reporter": "^2.1.6",
+    "wdio-obsidian-service": "^2.1.6"
   },
   "dependencies": {
     "@tanstack/match-sorter-utils": "^8.15.1",
