--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"name": "Kanban with Notes",
 	"version": "1.0.0",
 	"minAppVersion": "1.0.0",
-	"description": "Create markdown-backed Kanban boards with inline board notes. Fork of obsidian-kanban by mgmeyers.",
+	"description": "Create markdown-backed Kanban boards with inline board notes. Enhanced fork of Kanban plugin by mgmeyers.",
 	"author": "Mark Lifson",
 	"authorUrl": "https://github.com/MALathon",
 	"helpUrl": "https://github.com/MALathon/obsidian-kanban-with-notes",
